.provarCaches/00D5f000005vwGkEAI/objects/rstkf__gltzn__c.object
<CustomObject>
    <description>gltzn__c</description>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>TEXT(rstkf__gltzn_trandate__c) + &quot;(&quot; + rstkf__gltzn_tranno__c + &quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gltzn_acctdate__c</fullName>
        <inlineHelpText>Represents the date that this transaction impacts the GL</inlineHelpText>
        <label>Accounting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__gltzn_cmpno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field carries the Parent (Reporting) Company to which this transaction belongs.</inlineHelpText>
        <label>Parent Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>Rollup Related Adjusting GL Transactions</relationshipLabel>
        <relationshipName>gltzns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltzn_cramt__c</fullName>
        <inlineHelpText>The amount crediting the given GL Account with this transaction for the Fiscal Year/Period defined</inlineHelpText>
        <label>Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gltzn_dramt__c</fullName>
        <inlineHelpText>The amount debiting the given GL Account with this transaction for the Fiscal Year/Period defined</inlineHelpText>
        <label>Debit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gltzn_glacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The GL Account associated with this transaction</inlineHelpText>
        <label>GL Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Rollup Related Adjusting GL Transactions</relationshipLabel>
        <relationshipName>gltzns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltzn_glperiod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A reference to the Fiscal Period associated with this transaction</inlineHelpText>
        <label>Fiscal Period Lookup</label>
        <referenceTo>rstkf__glperiod__c</referenceTo>
        <relationshipLabel>Rollup Related Adjusting GL Transactions</relationshipLabel>
        <relationshipName>gltzns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltzn_gltxnsum__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field carries a reference to the GL Transaction Summary record into which this transactions was included.</inlineHelpText>
        <label>GL Transaction Summary</label>
        <referenceTo>rstkf__gltxnsum__c</referenceTo>
        <relationshipLabel>Rollup Related Adjusting GL Transactions</relationshipLabel>
        <relationshipName>gltzns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltzn_glyear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Fiscal Year associated with this transaction</inlineHelpText>
        <label>Fiscal Year</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipLabel>Rollup Related Adjusting GL Transactions</relationshipLabel>
        <relationshipName>gltzns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltzn_period__c</fullName>
        <inlineHelpText>The Fiscal Period associated with this transaction (number)</inlineHelpText>
        <label>Fiscal Period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gltzn_source__c</fullName>
        <inlineHelpText>A value that represents the &quot;source&quot; of this transaction. See documentation for &quot;Source&quot; values.</inlineHelpText>
        <label>Source</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gltzn_subcmpno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field carries a reference to the Subsidiary Company to which this transaction is associated.</inlineHelpText>
        <label>Subsidiary Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>Rollup Related Adjusting GL Transactions (Subsidiary Company)</relationshipLabel>
        <relationshipName>gltzns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltzn_trandate__c</fullName>
        <inlineHelpText>This is the date the transaction occurred, which may differ from the Accounting Date.</inlineHelpText>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__gltzn_tranno__c</fullName>
        <inlineHelpText>The system generated transaction number</inlineHelpText>
        <label>Transaction Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <description>triggeroptions__c</description>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Rollup Related Adjusting GL Transaction</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rollup Related Adjusting GL Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>